app/src/client/index.css
@import url('./assets/fonts/index.css');
@import url('./colors.css');

:root {
  --theme-background: 255 255 255;
  --theme-foreground: 0 0 0;
  --theme-primary: 0 0 0;
  --theme-primary-foreground: 255 255 255;
  --theme-secondary: 230 230 230;
  --theme-muted: 220 220 220;
  --theme-accent: 35 35 35;
  --theme-success: 22 163 74;
  --theme-success-foreground: 220 252 231;
  --theme-warning: 202 138 4;
  --theme-warning-foreground: 254 249 195;
  --theme-danger: 220 38 38;
  --theme-danger-foreground: 254 226 226;
  --theme-tag-string: 21 128 61;
  --theme-tag-list: 190 24 93;
  --theme-tag-set: 29 78 216;
  --theme-tag-zset: 109 40 217;
  --theme-tag-hash: 180 83 9;
  --theme-tag-stream: 185 28 28;

  --primary-color: rgba(var(--color-primary) / 1);
  --primary-foreground-color: rgba(var(--color-primary-foreground) / 1);
  --accent-color: rgba(var(--color-accent) / 1);
  --background-color: rgba(var(--color-background) / 1);
  --foreground-color: rgba(var(--color-foreground) / 1);
  --muted-color: rgba(var(--color-muted) / 1);

  --border-color: rgba(var(--color-border) / 1);
  --border-radius: 0.5rem;
  --border-style: dashed;

  --font-mono: 'Geist Mono', monospace;
  --font-sans: var(--font-mono);

  --spacing-md: 0.5rem;
  --spacing-lg: 1rem;

  --control-height: 2.25rem;

  --color: var(--foreground-color);
  --bg-color: transparent;

  --success-color: rgba(var(--color-success) / 1);
  --success-bg-color: rgba(var(--color-success-bg) / 1);

  --warning-color: rgba(var(--color-warning) / 1);
  --warning-bg-color: rgba(var(--color-warning-bg) / 1);

  --danger-color: rgba(var(--color-danger) / 1);
  --danger-bg-color: rgba(var(--color-danger-bg) / 1);
}

:root {
  --color-primary: var(--theme-primary);
  --color-primary-foreground: var(--theme-primary-foreground);
  --color-accent: var(--theme-accent);
  --color-background: var(--theme-background);
  --color-muted: var(--theme-muted);
  --color-foreground: var(--theme-foreground);
  --color-border: var(--theme-secondary);

  --color-success: var(--theme-success);
  --color-success-bg: var(--theme-success-foreground);
  --color-warning: var(--theme-warning);
  --color-warning-bg: var(--theme-warning-foreground);
  --color-danger: var(--theme-danger);
  --color-danger-bg: var(--theme-danger-foreground);

  --redis-type-hash: var(--theme-tag-hash);
  --redis-type-set: var(--theme-tag-set);
  --redis-type-zset: var(--theme-tag-zset);
  --redis-type-list: var(--theme-tag-list);
  --redis-type-string: var(--theme-tag-string);
  --redis-type-stream: var(--theme-tag-stream);
}

:root.dark {
  color-scheme: dark;
}

:root.light {
  color-scheme: light;
}

* {
  font-family:
    var(--font-sans),
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    'Open Sans',
    'Helvetica Neue',
    sans-serif;
}

* {
  box-sizing: border-box;
  border-color: var(--border-color);
  user-select: none;
}

html,
body {
  overscroll-behavior: none;
  background-color: var(--background-color);
  color: var(--foreground-color);
}

code {
  font-family: var(--font-mono);
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
}

